@startuml
package "ApplicationService" {
    package "Repository" {
        interface "PersonRepository"
        interface "SeminarRepository"
        interface "SeminarraumRepository"
    }
}
package "db" {
    package "person" {
        class "PersonRepositoryImpl" {
        }
        interface "PersonDao" {
        }
    }

    package "seminar" {
        class "SeminarRepositoryImpl" {
        }
        interface "SeminarDao" {
        }

        class "SeminarraumRepositoryImpl" {
        }
        interface "SeminarraumDao" {
        }
    }

    interface "JpaRepository" {
    }
    class "Hibernate(an implementation of JPA)" {
    }
}
database "postgres" {
}
'Person
"PersonRepositoryImpl" --|> "PersonRepository"
"PersonRepositoryImpl" --> "PersonDao"
"PersonDao" ..>"JpaRepository"

'Seminar
"SeminarRepositoryImpl" --|> "SeminarRepository"
"SeminarRepositoryImpl" --> "SeminarDao"
"SeminarDao" ..> "JpaRepository"

'Seminarraum
"SeminarraumRepositoryImpl" --|> "SeminarraumRepository"
"SeminarraumRepositoryImpl" --> "SeminarraumDao"
"SeminarraumDao" ..> "JpaRepository"

'Hibernate
"JpaRepository" <|-- "Hibernate(an implementation of JPA)"
"Hibernate(an implementation of JPA)" --> postgres: connect with datasource  by  "JDBC" url
@enduml